# professional_cmake

./: CMakeLists.txt  README.md  debug.c  test.c
math/: CMakeLists.txt
simple_project/: CMakeLists.txt
strings/: CMakeLists.txt
vars/: CMakeLists.txt
